# P4MSLO

./: .dockerignore  .gitignore  CLAUDE-MOCK.md  CLAUDE.md  Dockerfile  Dockerfile.test  LICENSE  MARISOL.md  README.md  esp32-wsl-flash.bat  esp32-wsl-setup.sh
.github/workflows/: ci.yml
common_components/esp32_p4_eye/: esp32_p4_eye.c
debug_gifs/: pimslo_capture.py  pimslo_test_parallax.py  test_dither.py  test_gif.py  test_quality.py
docs/: OPTIMIZATIONS.md  SN74AHCT125N-circuit.md  c6-coprocessor-research.md  circuit-diagram.md  circuit_diagram_b.md  device-info.md  jpeg-decode-investigation.md  lcd-display-options.md  p4x-c6-coprocessor-research.md  phase-plan.md  simulator-screenshots.md  wifi-spi-coexistence.md
esp32s3/: .gitignore  CLAUDE.md  CMakeLists.txt  MARISOL.md  README.md  partitions.csv  platformio.ini  sdkconfig.defaults
esp32s3/docs/: ARCHITECTURE.md
esp32s3/scripts/: inject_version.py  patch_camera_lib.py
esp32s3/src/: idf_component.yml  main.cpp
esp32s3/src/camera/: CameraManager.cpp  CameraManager.h  JpegReencoder.c  JpegReencoder.h
esp32s3/src/config/: Config.h
esp32s3/src/led/: StatusLED.cpp  StatusLED.h
esp32s3/src/network/: HttpServer.cpp  HttpServer.h  WiFiManager.cpp  WiFiManager.h
esp32s3/src/ota/: OTAManager.cpp  OTAManager.h
esp32s3/src/spi/: SPISlave.cpp  SPISlave.h
esp32s3/src/storage/: SDCardManager.cpp  SDCardManager.h
factory_demo/: CMakeLists.txt  README.md  sdkconfig.defaults
factory_demo/main/: CMakeLists.txt  idf_component.yml  main.c  wifi_config.h
factory_demo/main/app/: app_album.c  app_album.h  app_control.c  app_serial_cmd.c  app_serial_cmd.h  app_storage.c
factory_demo/main/app/AI/: app_ai_detect.cpp
factory_demo/main/app/Gif/: app_gifs.c  app_gifs.h  gif_decoder.c  gif_decoder.h  gif_encoder.c  gif_encoder.h  gif_lzw.c  gif_lzw.h  gif_quantize.c  gif_quantize.h  gif_simd.S  gif_tjpgd.c  gif_tjpgd.h  gif_types.h
factory_demo/main/app/Net/: app_p4_net.c  app_p4_net.h
factory_demo/main/app/Pimslo/: app_pimslo.c  app_pimslo.h
factory_demo/main/app/Spi/: spi_camera.c  spi_camera.h
factory_demo/main/app/Video/: app_video.c  app_video_photo.c  app_video_photo_quality.c  app_video_photo_quality.h  app_video_record.c  app_video_stream.c  app_video_stream.h
factory_demo/main/ui/: ui.c  ui.h  ui_extra.c  ui_extra.h
factory_demo/main/ui/images/: ui_img_gifs_big_png.c
factory_demo/main/ui/screens/: ui_ScreenCamera.c  ui_ScreenGifs.c
factory_demo/patches/: 0001-esp_lvgl_port-knob-uninit.patch
screenshots/: screenshot_000_MAIN.ppm  screenshot_002_MAIN.ppm  screenshot_003_MAIN.ppm  screenshot_004_MAIN.ppm  screenshot_005_MAIN.ppm  screenshot_007_MAIN.ppm  screenshot_008_CAMERA.ppm  screenshot_009_CAMERA.ppm  screenshot_010_CAMERA.ppm  screenshot_011_CAMERA.ppm  screenshot_012_SETTINGS.ppm  screenshot_013_SETTINGS.ppm  screenshot_014_SETTINGS.ppm  screenshot_016_ALBUM.ppm  screenshot_017_AI_DETECT.ppm  screenshot_018_AI_DETECT.ppm  screenshot_020_INTERVAL_CAM.ppm  screenshot_021_INTERVAL_CAM.ppm  screenshot_022_USB_DISK.ppm  screenshot_023_MAIN.ppm  screenshot_024_CAMERA.ppm  screenshot_025_SETTINGS.ppm  screenshot_026_AI_DETECT.ppm  screenshot_027_USB_DISK.ppm
scripts/: test_decode_rate.py  test_spi_integrity.py
test/: CMakeLists.txt  run_tests.sh  serial_test.py  test_ai_buffers.c  test_gpio_bsp.c  test_nvs_storage.c  test_phase2_preview.c  test_phase4_exposure.c  test_photo_quality.c  test_photo_quality.h  test_sleep_wakeup.c  test_ui_state.c
test/host_encode/: CMakeLists.txt  gif_simd_stub.c  host_encode_main.c  run.sh  test_budget.c  test_e2e.c  test_jpeg_bounds.c  test_phases.c  test_quantize_bins.c  test_timing.c
test/mocks/: esp_attr.h  esp_check.h  esp_err.h  esp_heap_caps.h  esp_log.h  esp_lvgl_port.h  esp_memory_utils.h  esp_sleep.h  esp_system.h  esp_timer.h  esp_vfs_fat.h  iot_button.h  iot_knob.h  mock_nvs.c  mock_nvs.h  nvs.h  nvs_flash.h  p4_budget.c  p4_budget.h  p4_mem_model.c  p4_mem_model.h  p4_phases.c  p4_phases.h  p4_timing.c  p4_timing.h  pimslo_sim.c  pimslo_sim.h  sdkconfig.h  ui_extra.c  ui_extra.h
test/mocks/bsp/: bsp_err_check.h  display.h  esp-bsp.h  esp32_p4_eye.h
test/mocks/driver/: gpio.h  i2c_master.h  jpeg_decode.h  ppa.h
test/mocks/esp_private/: esp_cache_private.h
test/mocks/freertos/: FreeRTOS.h  task.h
test/simulator/: CMakeLists.txt  README.md  lv_conf.h  lv_drv_conf.h  sim_config.h  sim_hal.c  sim_hal.h  sim_main.c  test_ui_simulator.c  ui_simulator.h
test/unity/: unity.h
tests/: README.md
tests/e2e/: 01_boot_and_liveness.py  02_camera_capture_to_gif.py  03_delete_modal.py  04_gallery_knob_nav.py  05_bg_encode_while_on_gallery.py  06_capture_timing.py  07_gallery_edge_cases.py  08_capture_edge_cases.py  09_gallery_empty_and_states.py  10_album_open_from_main.py  11_capture_timing_detailed.py  11_heartbeat.py  12_dma_heap_health.py  13_spi_back_to_back.py  14_capture_encode_offpage.py  15_format_then_photo.py  _album_crash_aggressive.py  _album_crash_repro.py  _isolate_encode.py  _lib.py  _o2_boot_capture.py  _o2_catch_boot.py  _o2_ping_test.py  _o2_reset_capture.py  _spi_20shot.py  run_all.sh  run_fast.sh
